Add tooltip helpers
- Pop tooltips over instructions to present a cheat-sheet of what the
  instruction does. Doc comes from https://github.com/mist64/c64ref,
  and is under a compatible BSD 2-clause licence.
- Pop tooltips over numbers (binary, hexadecimal, decimal) and show
  the two other forms to help conversions.
- Add settings to let the user choose which tooltips to enable and
  which instruction set to use in the cheat-sheet tooltips.

--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "activationCommands": {},
   "bundleDependencies": false,
   "name": "language-ca65-asm",
+  "main": "./lib/asm-reference",
+  "styles": [ "./styles/language-ca65-asm" ],
   "version": "0.2.0",
-  "description": "Adds syntax highlighting for the CA65 6502 assembler.",
+  "description": "Adds syntax highlighting and instruction cheatsheet for the CA65 6502 assembler.",
   "dependencies": {},
   "deprecated": false,
   "engines": {
